--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 <link href="/common.css" rel="stylesheet">
 <link href="/guestbook.css" rel="stylesheet">
 
-<title>방명록 (K8S)</title>
+<title>방명록+SS (K8S)</title>
 </head>
 <body>
 	<div class="guestbook list displaynone" style="display: block;">
@@ -18,7 +18,7 @@ HealthCheck : This is v1 running in pod [[${host.name}]] ([[${host.ip}]])
 		</ul>
 	</div>
 	
-	<h4 class="g-top">방명록 v1</h4>
+	<h4 class="g-top">방명록+SS v1</h4>
 	<div class="top-img">
 		<img src="/bg-guestbook.jpg">
 	</div>
